--- a/Website/shared/styling/global-style.css
+++ b/Website/shared/styling/global-style.css
@@ -27,3 +27,57 @@ html p {
 .black-text {
     color: black;
 }
+
+.text-input {
+    background-color: rgb(195,205,216);
+}
+
+.textarea-input {
+    background-color: rgb(195,205,216);
+    resize: none;
+}
+
+/* Dropdown menu if needed */
+.dropdown {
+    display: inline-block;
+    position: relative;
+}
+
+.dropbtn {
+    background-color: rgb(54, 85, 120);
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    border-radius: 15px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    border-radius: 15px;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+.dropdown-content a:hover {
+    background-color: rgb(177,22,46);
+    border-radius: 15px;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: rgb(60, 80, 100);
+}
