--- a/Website/templates/sample.html
+++ b/Website/templates/sample.html
@@ -16,7 +16,27 @@
             <p class="black-text">ROSEN</p>
         </div>
         
-       
+        <div>
+            <p class="black-text"> Below are some text inputs sample: </p>
+            <div>
+                <input class="text-input" type="text" name="fname" placeholder="Input Your Name">
+                <textarea class="textarea-input" rows="4" name="fname" placeholder="Input Your Name"></textarea>
+            </div>
+        </div>
+
+        <div>
+            <p class="black-text"> Below are some dropdown menu: </p>
+            <div>
+                <div class="dropdown">
+                    <button class="dropbtn">Menu</button>
+                    <div class="dropdown-content">
+                      <a href="https://google.ca">Google</a>
+                      <a href="https://canvas.ubc.ca/">UBCO Canvas</a>
+                    </div>
+                  </div>
+            </div>
+        </div>
+
 
     </body>
 </HTML>
