Added html elements to image.html

--- a/Website/templates/image.html
+++ b/Website/templates/image.html
@@ -5,7 +5,187 @@
     </head>
 
     <body>
+        
+        <div class="dark-blue-test">
+            <div>
+                <br>
+                <img src="../shared/images/ROSEN_Logo_White_220.png">
+            </div>
+        </div>
 
+
+
+        <div>
+            <div class="background-blue-test">
+                <img src="../shared/images/fish.png" width="240px" height="240px">
+                <div>
+                    <button>
+                        <img src="../shared/images/x-button.png">
+                    </button>
+                    <button>
+                        <img src="../shared/images/check-button.png">
+                    </button>
+                </div>
+            </div>
+
+            <div class="background-blue-test" style="margin-left:20px;">
+                <img src="" width="240px" height="240px">
+                <div>
+                    <button>
+                        <img src="../shared/images/x-button.png">
+                    </button>
+                    <button>
+                        <img src="../shared/images/check-button.png">
+                    </button>
+                </div>
+            </div>
+
+            <div class="background-blue-test" style="margin-left:20px;">
+                <img src="" width="240px" height="240px">
+                <div>
+                    <button>
+                        <img src="../shared/images/x-button.png">
+                    </button>
+                    <button>
+                        <img src="../shared/images/check-button.png">
+                    </button>
+                </div>
+            </div>
+
+            <div class="background-blue-test" style="margin-left:20px;">
+                <img src="" width="240px" height="240px">
+                <div>
+                    <button>
+                        <img src="../shared/images/x-button.png">
+                    </button>
+                    <button>
+                        <img src="../shared/images/check-button.png">
+                    </button>
+                </div>
+            </div>
+
+            <div class="background-blue-test" style="margin-left:20px;">
+                <img src="" width="240px" height="240px">
+                <div>
+                    <button>
+                        <img src="../shared/images/x-button.png">
+                    </button>
+                    <button>
+                        <img src="../shared/images/check-button.png">
+                    </button>
+                </div>
+            </div>
+
+            <br><br>
+
+            <div class="background-blue-test">
+                <img src="" width="240px" height="240px">
+                <div>
+                    <button>
+                        <img src="../shared/images/x-button.png">
+                    </button>
+                    <button>
+                        <img src="../shared/images/check-button.png">
+                    </button>
+                </div>
+            </div>
+
+            <div class="background-blue-test" style="margin-left:20px;">
+                <img src="" width="240px" height="240px">
+                <div>
+                    <button>
+                        <img src="../shared/images/x-button.png">
+                    </button>
+                    <button>
+                        <img src="../shared/images/check-button.png">
+                    </button>
+                </div>
+            </div>
+
+            <div class="background-blue-test" style="margin-left:20px;">
+                <img src="" width="240px" height="240px">
+                <div>
+                    <button>
+                        <img src="../shared/images/x-button.png">
+                    </button>
+                    <button>
+                        <img src="../shared/images/check-button.png">
+                    </button>
+                </div>
+            </div>
+
+            <div class="background-blue-test" style="margin-left:20px;">
+                <img src="" width="240px" height="240px">
+                <div>
+                    <button>
+                        <img src="../shared/images/x-button.png">
+                    </button>
+                    <button>
+                        <img src="../shared/images/check-button.png">
+                    </button>
+                </div>
+            </div>
+
+            <div class="background-blue-test" style="margin-left:20px;">
+                <img src="" width="240px" height="240px">
+                <div>
+                    <button>
+                        <img src="../shared/images/x-button.png">
+                    </button>
+                    <button>
+                        <img src="../shared/images/check-button.png">
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <br><br><br><br><br><br>
+
+        <div>
+
+            <div>
+                <div>
+                    <button>
+                        <img src="../shared/images/select-button.png">
+                    </button>
+                </div>
+
+                <div>
+                    <button>
+                        <img src="../shared/images/pan-button.png">
+                    </button>
+                </div>
+
+                <div>
+                    <button>
+                        <img src="../shared/images/zoom-in-button.png">
+                    </button>
+                </div>
+
+                <div>
+                    <button>
+                        <img src="../shared/images/zoom-out-button.png">
+                    </button>
+                </div>
+
+
+
+                <div>
+                    <button class="dark-blue-test">
+                        <b>Rerun</b>
+                    </button>
+                </div>
+            </div>
+
+
+
+            <br><br><br><br><br><br>
+
+            <div class="dark-blue-test">
+                
+            </div>
+
+        </div>
 
     </body>
     
