Updated global-style.css with image.html stylings

--- a/Website/templates/image.html
+++ b/Website/templates/image.html
@@ -6,8 +6,8 @@
 
     <body>
         
-        <div class="dark-blue-test">
-            <div>
+        <div class="top-border">
+            <div class="rosen-logo">
                 <br>
                 <img src="../shared/images/ROSEN_Logo_White_220.png">
             </div>
@@ -15,62 +15,62 @@
 
 
 
-        <div>
-            <div class="background-blue-test">
+        <div class="images">
+            <div class="image-box">
                 <img src="../shared/images/fish.png" width="240px" height="240px">
-                <div>
-                    <button>
+                <div class="x-check">
+                    <button class="x-button">
                         <img src="../shared/images/x-button.png">
                     </button>
-                    <button>
+                    <button class="check-button">
                         <img src="../shared/images/check-button.png">
                     </button>
                 </div>
             </div>
 
-            <div class="background-blue-test" style="margin-left:20px;">
+            <div class="image-box">
                 <img src="" width="240px" height="240px">
-                <div>
-                    <button>
+                <div class="x-check">
+                    <button class="x-button">
                         <img src="../shared/images/x-button.png">
                     </button>
-                    <button>
+                    <button class="check-button">
                         <img src="../shared/images/check-button.png">
                     </button>
                 </div>
             </div>
 
-            <div class="background-blue-test" style="margin-left:20px;">
+            <div class="image-box">
                 <img src="" width="240px" height="240px">
-                <div>
-                    <button>
+                <div class="x-check">
+                    <button class="x-button">
                         <img src="../shared/images/x-button.png">
                     </button>
-                    <button>
+                    <button class="check-button">
                         <img src="../shared/images/check-button.png">
                     </button>
                 </div>
             </div>
 
-            <div class="background-blue-test" style="margin-left:20px;">
+            <div class="image-box">
                 <img src="" width="240px" height="240px">
-                <div>
-                    <button>
+                <div class="x-check">
+                    <button class="x-button">
                         <img src="../shared/images/x-button.png">
                     </button>
-                    <button>
+                    <button class="check-button">
                         <img src="../shared/images/check-button.png">
                     </button>
                 </div>
             </div>
 
-            <div class="background-blue-test" style="margin-left:20px;">
+            <div class="image-box">
                 <img src="" width="240px" height="240px">
-                <div>
-                    <button>
+                <div class="x-check">
+                    <button class="x-button">
                         <img src="../shared/images/x-button.png">
                     </button>
-                    <button>
+                    <button class="check-button">
                         <img src="../shared/images/check-button.png">
                     </button>
                 </div>
@@ -78,100 +78,100 @@
 
             <br><br>
 
-            <div class="background-blue-test">
+            <div class="image-box">
                 <img src="" width="240px" height="240px">
-                <div>
-                    <button>
+                <div class="x-check">
+                    <button class="x-button">
                         <img src="../shared/images/x-button.png">
                     </button>
-                    <button>
+                    <button class="check-button">
                         <img src="../shared/images/check-button.png">
                     </button>
                 </div>
             </div>
 
-            <div class="background-blue-test" style="margin-left:20px;">
+            <div class="image-box">
                 <img src="" width="240px" height="240px">
-                <div>
-                    <button>
+                <div class="x-check">
+                    <button class="x-button">
                         <img src="../shared/images/x-button.png">
                     </button>
-                    <button>
+                    <button class="check-button">
                         <img src="../shared/images/check-button.png">
                     </button>
                 </div>
             </div>
 
-            <div class="background-blue-test" style="margin-left:20px;">
+            <div class="image-box">
                 <img src="" width="240px" height="240px">
-                <div>
-                    <button>
+                <div class="x-check">
+                    <button class="x-button">
                         <img src="../shared/images/x-button.png">
                     </button>
-                    <button>
+                    <button class="check-button">
                         <img src="../shared/images/check-button.png">
                     </button>
                 </div>
             </div>
 
-            <div class="background-blue-test" style="margin-left:20px;">
+            <div class="image-box">
                 <img src="" width="240px" height="240px">
-                <div>
-                    <button>
+                <div class="x-check">
+                    <button class="x-button">
                         <img src="../shared/images/x-button.png">
                     </button>
-                    <button>
+                    <button class="check-button">
                         <img src="../shared/images/check-button.png">
                     </button>
                 </div>
             </div>
 
-            <div class="background-blue-test" style="margin-left:20px;">
+            <div class="image-box">
                 <img src="" width="240px" height="240px">
-                <div>
-                    <button>
+                <div class="x-check">
+                    <button class="x-button">
                         <img src="../shared/images/x-button.png">
                     </button>
-                    <button>
+                    <button class="check-button">
                         <img src="../shared/images/check-button.png">
                     </button>
                 </div>
             </div>
         </div>
 
-        <br><br><br><br><br><br>
+        <br><br><br><br>
 
         <div>
 
-            <div>
-                <div>
-                    <button>
+            <div class="toolbar-rerun">
+                <div class="toolbar">
+                    <button class="tools">
                         <img src="../shared/images/select-button.png">
                     </button>
                 </div>
 
-                <div>
-                    <button>
+                <div class="toolbar">
+                    <button class="tools">
                         <img src="../shared/images/pan-button.png">
                     </button>
                 </div>
 
-                <div>
-                    <button>
+                <div class="toolbar">
+                    <button class="tools">
                         <img src="../shared/images/zoom-in-button.png">
                     </button>
                 </div>
 
-                <div>
-                    <button>
+                <div class="toolbar">
+                    <button class="tools">
                         <img src="../shared/images/zoom-out-button.png">
                     </button>
                 </div>
 
 
 
-                <div>
-                    <button class="dark-blue-test">
+                <div class="rerun">
+                    <button class="rerun-button">
                         <b>Rerun</b>
                     </button>
                 </div>
@@ -179,9 +179,9 @@
 
 
 
-            <br><br><br><br><br><br>
+            <br><br><br>
 
-            <div class="dark-blue-test">
+            <div class="bottom-border">
                 
             </div>
 
