--- a/Website/shared/styling/global-style.css
+++ b/Website/shared/styling/global-style.css
@@ -81,3 +81,108 @@ html p {
 .dropdown:hover .dropbtn {
     background-color: rgb(60, 80, 100);
 }
+
+
+
+/* Styles for image.html */
+
+body {
+    max-width: 1440px;
+    background-color: white;
+}
+
+.top-border {
+    background-color: rgb(54, 85, 120);
+    display: block;
+    position: relative;
+    height: 100px;
+}
+
+.rosen-logo {
+    display: block;
+    position: relative;
+    left: 20px;
+}
+
+.images {
+    display: block;
+    position: relative;
+    margin: 0 auto;
+
+}
+
+/* Placeholder boxes for the images the user will classify */
+.image-box {
+    background-color: rgba(126, 155, 187, 0.3);
+    display: inline-block;
+    position: relative;
+    margin-left: 20px;
+    top: 20px;
+    height: 240px;
+    width: 240px;
+}
+
+/* May switch x button and check button out for box selection */
+.x-check {
+    display: block;
+    position: relative;
+    text-align: center;
+    top: 5px;
+}
+
+.x-button {
+    background-color: transparent;
+    border: none;
+}
+
+.check-button {
+    border: none;
+    background-color: transparent;
+    margin-left: 10px;
+}
+
+.toolbar-rerun {
+    display: block;
+    position: relative;
+    margin-left: 20px;
+}
+
+.toolbar {
+    display: inline-block;
+    position: relative;
+    top: 40px;
+}
+
+/* Need to add functionality to change image colors/swap for darker images when hovering over tool icons */
+.tools {
+    background-color: transparent;
+    border: none;
+}
+
+.rerun {
+    display: inline-block;
+    right: 20px;
+    position: absolute;
+}
+
+.rerun-button {
+    background-color: rgb(54, 85, 120);
+    color: white;
+    border: none;
+    border-radius: 30px;
+    font-size: 48px;
+    width: 243px;
+    height: 98px;
+}
+
+/* Change colour when hovering over the Rerun Button */
+.rerun:hover .rerun-button {
+    background-color: rgb(60, 80, 100);
+}
+
+.bottom-border {
+    background-color: rgb(54, 85, 120);
+    display: block;
+    position: relative;
+    height: 20px;
+}
