--- a/Website/shared/styling/global-style.css
+++ b/Website/shared/styling/global-style.css
@@ -1,4 +1,10 @@
 /* Global Stylings */
+*{
+    border: 0;
+    padding: 0;
+    margin: 0;
+}
+
 html {
     font-family: "Arial";
 }
@@ -87,7 +93,7 @@ html p {
 /* Styles for image.html */
 
 body {
-    max-width: 1440px;
+    max-width: 100%;
     background-color: white;
 }
 
@@ -96,13 +102,15 @@ body {
     display: block;
     position: relative;
     height: 100px;
+    overflow: hidden;
 }
 
 .rosen-logo {
-    display: block;
-    position: relative;
+    position:relative;
+    display: flex;
     left: 20px;
 }
+
 
 .images {
     display: block;
@@ -185,4 +193,37 @@ body {
     display: block;
     position: relative;
     height: 20px;
+}
+
+footer{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgb(54, 85, 120);
+    height: auto;
+    width: 100%;
+    padding-top: 30px;
+}
+
+.drop-zone {
+    max-width: 200px;
+    height: 200px;
+    padding: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    cursor: pointer;
+    color: rgb(54, 85, 120);
+    border: 4px dashed grey;
+    border-radius: 10px;
+}
+
+.drop-zone--over {
+    border-style: solid;
+}
+
+.drop-zone__input {
+    display: none;
 }
