Updated CSS and index.html

--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -19,6 +19,7 @@
                   <span class="drop-zone__text">
                         Drop file here or click to upload
                   </span>
+                  <div class="drop-zone__thumb" data-label="userFile.txt"></div>
                   <input type="file" name="userFile" class="drop-zone__input">
             </div>
 
@@ -32,7 +33,15 @@
             <!--Preview Video area-->
 
 
-            
+
+
+            <!--Run button-->
+            <div class="run">
+                  <button class="run-button">
+                      <b>Run</b>
+                  </button>
+            </div>
+
 
 
             <!--Footer div-->
