--- a/Website/shared/styling/global-style.css
+++ b/Website/shared/styling/global-style.css
@@ -227,3 +227,23 @@ footer{
 .drop-zone__input {
     display: none;
 }
+
+.drop-zone__thumb {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: #cccccc;
+    background-size: cover;
+    
+}
+
+.run-button {
+    background-color: rgb(54, 85, 120);
+    color: white;
+    border: none;
+    border-radius: 30px;
+    font-size: 16px;
+    width: 100px;
+    height: 50px;
+}
