--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -26,12 +26,16 @@
 
 
             <!--Preview Photo area-->
-
+            <div>
+                  <p>Uploaded Photo</p>
+            </div>
 
 
 
             <!--Preview Video area-->
-
+            <div>
+                  <p>Uploaded Video</p>
+            </div>
 
 
 
