--- a/Website/shared/styling/global-style.css
+++ b/Website/shared/styling/global-style.css
@@ -207,7 +207,7 @@ footer{
 }
 
 .drop-zone {
-    max-width: 200px;
+    max-width: 80%;
     height: 200px;
     padding: 25px;
     display: flex;
@@ -218,6 +218,7 @@ footer{
     color: rgb(54, 85, 120);
     border: 4px dashed grey;
     border-radius: 10px;
+    margin: auto;
 }
 
 .drop-zone--over {
