refactoring folders and fix links for images and styles

--- a/Website/static/styles/global-style.css
+++ b/Website/static/styles/global-style.css
@@ -248,3 +248,8 @@ footer{
     width: 100px;
     height: 50px;
 }
+
+.run-button:hover {
+    cursor: pointer;
+    background-color: rgb(60, 80, 100);
+}
