--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -2,14 +2,14 @@
       <html lang="en">
       <head>
             <title>Home</title>
-            <link rel="stylesheet" href="../shared/styling/global-style.css">
+            <link rel="stylesheet" href="{{ url_for('static',filename='styles/global-style.css') }}">
       </head>
 
       <body>
             <!--NavBar-->
             <div class="top-border">
                   <div class="rosen-logo">
-                        <img src="../shared/images/ROSEN_Logo_White_220.png" id="logo">
+                        <img src="{{url_for('static', filename='images/ROSEN_Logo_White_220.png')}}" id="logo">
                   </div>
             </div>
 
