routing and small refactoring

--- a/Website/templates/image.html
+++ b/Website/templates/image.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="../shared/styling/global-style.css">
+        <link rel="stylesheet" href="{{ url_for('static',filename='styles/global-style.css') }}">
     </head>
 
     <body>
@@ -9,7 +9,7 @@
         <div class="top-border">
             <div class="rosen-logo">
                 <br>
-                <img src="../shared/images/ROSEN_Logo_White_220.png">
+                <img src="{{url_for('static', filename='images/ROSEN_Logo_White_220.png')}}" id="logo">
             </div>
         </div>
 
@@ -17,13 +17,13 @@
 
         <div class="images">
             <div class="image-box">
-                <img src="../shared/images/fish.png" width="240px" height="240px">
+                <img src="{{url_for('static', filename='images/fish.png')}}" width="240px" height="240px">
                 <div class="x-check">
                     <button class="x-button">
-                        <img src="../shared/images/x-button.png">
+                        <img src="{{url_for('static', filename='images/x-button.png')}}">
                     </button>
                     <button class="check-button">
-                        <img src="../shared/images/check-button.png">
+                        <img src="{{url_for('static', filename='images/check-button.png')}}">
                     </button>
                 </div>
             </div>
@@ -32,10 +32,10 @@
                 <img src="" width="240px" height="240px">
                 <div class="x-check">
                     <button class="x-button">
-                        <img src="../shared/images/x-button.png">
+                        <img src="{{url_for('static', filename='images/x-button.png')}}">
                     </button>
                     <button class="check-button">
-                        <img src="../shared/images/check-button.png">
+                        <img src="{{url_for('static', filename='images/check-button.png')}}">
                     </button>
                 </div>
             </div>
@@ -44,10 +44,10 @@
                 <img src="" width="240px" height="240px">
                 <div class="x-check">
                     <button class="x-button">
-                        <img src="../shared/images/x-button.png">
+                        <img src="{{url_for('static', filename='images/x-button.png')}}">
                     </button>
                     <button class="check-button">
-                        <img src="../shared/images/check-button.png">
+                        <img src="{{url_for('static', filename='images/check-button.png')}}">
                     </button>
                 </div>
             </div>
@@ -56,10 +56,10 @@
                 <img src="" width="240px" height="240px">
                 <div class="x-check">
                     <button class="x-button">
-                        <img src="../shared/images/x-button.png">
+                        <img src="{{url_for('static', filename='images/x-button.png')}}">
                     </button>
                     <button class="check-button">
-                        <img src="../shared/images/check-button.png">
+                        <img src="{{url_for('static', filename='images/check-button.png')}}">
                     </button>
                 </div>
             </div>
@@ -68,10 +68,10 @@
                 <img src="" width="240px" height="240px">
                 <div class="x-check">
                     <button class="x-button">
-                        <img src="../shared/images/x-button.png">
+                        <img src="{{url_for('static', filename='images/x-button.png')}}">
                     </button>
                     <button class="check-button">
-                        <img src="../shared/images/check-button.png">
+                        <img src="{{url_for('static', filename='images/check-button.png')}}">
                     </button>
                 </div>
             </div>
@@ -82,10 +82,10 @@
                 <img src="" width="240px" height="240px">
                 <div class="x-check">
                     <button class="x-button">
-                        <img src="../shared/images/x-button.png">
+                        <img src="{{url_for('static', filename='images/x-button.png')}}">
                     </button>
                     <button class="check-button">
-                        <img src="../shared/images/check-button.png">
+                        <img src="{{url_for('static', filename='images/check-button.png')}}">
                     </button>
                 </div>
             </div>
@@ -94,10 +94,10 @@
                 <img src="" width="240px" height="240px">
                 <div class="x-check">
                     <button class="x-button">
-                        <img src="../shared/images/x-button.png">
+                        <img src="{{url_for('static', filename='images/x-button.png')}}">
                     </button>
                     <button class="check-button">
-                        <img src="../shared/images/check-button.png">
+                        <img src="{{url_for('static', filename='images/check-button.png')}}">
                     </button>
                 </div>
             </div>
@@ -106,10 +106,10 @@
                 <img src="" width="240px" height="240px">
                 <div class="x-check">
                     <button class="x-button">
-                        <img src="../shared/images/x-button.png">
+                        <img src="{{url_for('static', filename='images/x-button.png')}}">
                     </button>
                     <button class="check-button">
-                        <img src="../shared/images/check-button.png">
+                        <img src="{{url_for('static', filename='images/check-button.png')}}">
                     </button>
                 </div>
             </div>
@@ -118,10 +118,10 @@
                 <img src="" width="240px" height="240px">
                 <div class="x-check">
                     <button class="x-button">
-                        <img src="../shared/images/x-button.png">
+                        <img src="{{url_for('static', filename='images/x-button.png')}}">
                     </button>
                     <button class="check-button">
-                        <img src="../shared/images/check-button.png">
+                        <img src="{{url_for('static', filename='images/check-button.png')}}">
                     </button>
                 </div>
             </div>
@@ -130,10 +130,10 @@
                 <img src="" width="240px" height="240px">
                 <div class="x-check">
                     <button class="x-button">
-                        <img src="../shared/images/x-button.png">
+                        <img src="{{url_for('static', filename='images/x-button.png')}}">
                     </button>
                     <button class="check-button">
-                        <img src="../shared/images/check-button.png">
+                        <img src="{{url_for('static', filename='images/check-button.png')}}">
                     </button>
                 </div>
             </div>
@@ -146,29 +146,34 @@
             <div class="toolbar-rerun">
                 <div class="toolbar">
                     <button class="tools">
-                        <img src="../shared/images/select-button.png">
+                        <img src="{{url_for('static', filename='images/select-button.png')}}">
                     </button>
                 </div>
 
                 <div class="toolbar">
                     <button class="tools">
-                        <img src="../shared/images/pan-button.png">
+                        <img src="{{url_for('static', filename='images/pan-button.png')}}">
                     </button>
                 </div>
 
                 <div class="toolbar">
                     <button class="tools">
-                        <img src="../shared/images/zoom-in-button.png">
+                        <img src="{{url_for('static', filename='images/zoom-in-button.png')}}">
                     </button>
                 </div>
 
                 <div class="toolbar">
                     <button class="tools">
-                        <img src="../shared/images/zoom-out-button.png">
+                        <img src="{{url_for('static', filename='images/zoom-out-button.png')}}">
                     </button>
                 </div>
 
-
+                <!--a href to redirect page to index.html-->
+                <a href=index>
+                    <button class="homepage-button">
+                        <b>Homepage</b>
+                    </button>
+                </a>
 
                 <div class="rerun">
                     <button class="rerun-button">
