--- a/Website/templates/index.html
+++ b/Website/templates/index.html
@@ -41,9 +41,12 @@
 
             <!--Run button-->
             <div class="run">
-                  <button class="run-button">
-                      <b>Run</b>
-                  </button>
+                  <!--a href to redirect page to image.html-->
+                  <a href=image>
+                        <button class="run-button">
+                        <b>Run</b>
+                        </button>
+                  </a>
             </div>
 
 
